*2007/07/06 
 Fixed initialize message for seedit-gui
 When uninstall, extra audit configuration is removed from audit.rules.

*2007/05/24 2.1.2
 - Support memory protection permissions for more security against buffer overrun attacks
   - Support execmem, execheap,execstack permissions.
     like,  allowpriv execmem; 
   - support execmod permission, you have to use file permission "m" to allow execmod.
   - Above permissions are only rarely used.
 - Added size optimize option: -t.
	-t 1: size optimization by attribute(Under construction, only stub)
	-t 2: size optimization by not supporting dir search permission.
 - Support busybox_contexts file by --busybox option(will be removed in the future however).
 - Some clean ups
 - Support Cent OS 5
 - not using seusers file 

*2007/05/19
 Fixed bug of RBAC for CentOS5.

*2007/02/14 2.1.1
 - Fixed bug
  -- seedit-converter did not work when "//" is included in path
 - Modified path to seedit-load.conf

*2007/02/05
- Fixed installhelper-include.sh for asianux 2
- Add seedit-load.conf to customize obj_type filed of audit
- Fixed RBAC bug

*2007/01/31 Beta7
- Merged to Fedora Extras.
 -- Removed bugs in rpm packages, cleaned up spec file, thanks to reviewers in Fedora Project!

*2007/01/26
* Fixed makefiles to preserve timestamps

*2007/01/25
- prepared /usr/share/seedit/sepolicy/rbac-on
 - if this exists, rbac is enabled. This file is created/deleted by seedit-rbac

*2007/01/24
- Cleaned spec file 
- Modified path /usr/share/seedit/scripts -> /usr/share/seedit/initialize


*2007/01/19
- Cleaned Makefiles, removed unused flags
- Cleaned spec file

* 2007/01/18
- Clean up of spec file.
- Not include spec file and seedit.desktop file and seedit-gui.png in tar ball.
- Moved all distro specific files to policy subdir.

* 2007/01/09 
- Merged 3 spec files to 1 spec file(seedit.spec).
 -- So, there is only 1 src.rpm package "seedit"
    3 packages(seedit,seedit-policy,seedit-gui) are generated from this.