@@ -36,19 +36,19 @@ extern int yyparse(void);
 #define DEFAULT_POLICY		"policy.conf"
 #define DEFAULT_FILE_CONTEXT	"file_context"
 
-const char usage[]= "Usage : seedit-converter [-t] [-p] -i <infile> -b <base policy dir> -o <output dir> --profile-data <attribute profile file> [--busybox]\n" \
+const char usage[]= "Usage : seedit-converter [-t] [-p] -i <infile> -b <base policy dir> -o <output dir> --profile-data <attribute profile file>\n" \
 	"	-t <number>: Tiny. Performs size optimization. Must be used with -a option.<number> is optimize level\n" \
 	"	-p: Profile. Generate profile data to be used -t option\n" \
 	"	-i <infile>: input SPDL file\n" \
 	"	-b: base policy dir. Usually it is /usr/share/seedit/base_policy\n" \
 	"	-o <outdir>: Result is generated in <outdir>\n"		\
 	"	--profile-data <attribute profile file>: Used with -t option, specifies profile generated by -p option.\n" \
-	"	--busybox Output busybox_contexts";
+	"	--disable-boolean: Do not output conditional policy\n" ;
 
 int gDiet_by_attr = 0;
 int gProfile = 0;
-int gBusybox = 0;
 int gDir_search = 1;
+int gNoBool = 0;
 
 int main(int argc, char **argv){
   char *outdir=NULL;
@@ -62,8 +62,8 @@ int main(int argc, char **argv){
   int level;
   static struct option long_options[] = {
 	  {"profile", 0, 0, 'p'},
-	  {"busybox", 0, 0, '\xfd'},
 	  {"profile-data",1, 0, '\xfe'},
+	  {"disable-boolean",0, 0, '\xfd'},
 	  {0, 0, 0, 0}
 
   };
@@ -99,6 +99,9 @@ int main(int argc, char **argv){
 			  exit(1);
 		  }
 		  break;
+	  case '\xfd':
+		  gNoBool = 1;
+		  break;
 	  case 'i':
 		  if ((input = fopen(optarg, "r")) == NULL){
 			  perror(optarg);
@@ -117,10 +120,6 @@ int main(int argc, char **argv){
 
 	  case 'I':
 		  include_dir = strdup(optarg);
-		  break;
-
-	  case '\xfd':
-		  gBusybox = 1;
 		  break;
 
 	  default:
